--- a/YouJi/YouJi/Info.plist
+++ b/YouJi/YouJi/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>保存图片到系统相册</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>App需要您的同意才能使用录像功能</string>
 	<key>CFBundleDevelopmentRegion</key>
