登录注册验证码用户头像问题解决

--- a/YouJi/YouJi/Info.plist
+++ b/YouJi/YouJi/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>保存图片到系统相册</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>App需要您的同意才能使用录像功能</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -22,10 +18,20 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>MOBAppKey</key>
+	<string>2d92ba1a3a87b</string>
+	<key>MOBAppSecret</key>
+	<string>a1af8017e2e07ea813df37620a3d6ed9</string>
 	<key>NSCameraUsageDescription</key>
 	<string>App需要您的同意才能使用相机</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>App需要您的同意才能使用录像功能</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>保存图片到系统相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App需要您的同意才能打开相册</string>
 	<key>UILaunchStoryboardName</key>
